--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-pdf": "^10.2.0",
     "react-pdftotext": "^1.3.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
