--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.6.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "pdf-lib": "^1.17.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.3.5",
     "react-pdf": "^10.2.0",
     "react-pdftotext": "^1.3.4",
     "react-redux": "^9.2.0",
